--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -33,7 +33,10 @@ jobs:
       run: chmod +x gradlew
 
     - name: Build with Gradle
-      run: ./gradlew build
+      run: ./gradlew clean build
+
+    - name: List build/libs output
+      run: ls -lh build/libs  
 
     - name: Build and Push Docker Image
       uses: mr-smithers-excellent/docker-build-push@v4
