--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,6 @@ on: workflow_dispatch
 jobs:
    first_job:
       runs-on: ubuntu-latest
-      steps:
-          name: print hello
-          run: echo 'hello'
+      - steps:
+           name: print hello
+           run: echo 'hello'
