--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,9 @@
 name: First Workflow
 on: workflow_dispatch
 jobs:
-   first-job:
-      runs-on: ubuntu-latest
-      - steps:
-         name: print hello
-         run: echo 'hello'
+  first-job:
+    runs-on: ubuntu-latest
+    steps:
+      - name: print hello
+        run: echo 'hello'
+
