--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,5 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: print hello
-        run: echo 'hello'
+        run: | 
+          echo 'hello'
+          echo 'abilash'
 
